feat: add publish status param on create demand
