# src/main/java/com/devikapps/vaikaparts/endpoint/rest/controller/exchange/DemandController.java
@@ -27,10 +27,17 @@ public class DemandController {
   private final DemandService demandService;
 
   @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-  public ResponseEntity<Demand> createDemand(@Valid @ModelAttribute CreateDemandRequest request) {
+  public ResponseEntity<Demand> createDemand(
+      @Valid @ModelAttribute CreateDemandRequest request,
+      @RequestParam(name = "published", required = false, defaultValue = "false") Boolean published) {
     var demand = demandService.createDemand(request.description(), request.part());
+    if (published) {
+      demand = demandService.updateDemandStatus(demand.getId(), PostStatus.PUBLISHED);
+    }
     return ResponseEntity.status(HttpStatus.CREATED).body(demand);
   }
+
+
 
   @GetMapping
   public Page<Demand> getResearcherDemands(
